--- a/src/app/forms.css
+++ b/src/app/forms.css
@@ -120,37 +120,99 @@ body {
 
 .maincontainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 2fr 1fr 7fr;
 }
 
 .maintable {
   justify-self: center;
-  grid-column: 2/2;
+  grid-column: 3/3;
+  grid-row: 4/4;
+}
+
+.websocket {
+  justify-self: start;
+  grid-column: 4/4;
   grid-row: 2/2;
+}
+
+.mainalert {
+  justify-self: end;
+  align-self: start;
+  grid-column: 2/2;
+  grid-row: 1/1;
 }
 
 .maintitle {
   justify-self: center;
   align-self: center;
-  grid-column: 2/2;
+  grid-column: 3/3;
   grid-row: 1/1;
   font-size: xx-large;
   font-weight: bold;
 }
 
+.mainstatus {
+  grid-column: 3/3;
+  grid-row: 2/2;
+  justify-self: start;
+  align-self: center;
+  margin-left: 1rem;
+}
+.mainstatustitle {
+  grid-column: 2/2;
+  grid-row: 2/2;
+  justify-self: end;
+  align-self: center;
+  font-size: large;
+  font-weight: bold;
+}
+
+.mainfilter {
+  grid-column: 3/4;
+  grid-row: 2/2;
+  justify-self: center;
+  align-self: center;
+}
+
+.filtercontainer {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 1rem;
+}
+
+.filterselector {
+  grid-column: 1/1;
+  align-self: center;
+}
+.filtertext {
+  grid-column: 2/2;
+  align-self: center;
+}
+
 .mainspinner {
   justify-self: center;
   align-self: start;
-  grid-column: 2/2;
+  grid-column: 3/3;
   grid-row: 1/1;
   font-size: 20rem;
+}
+.loadingspinner {
+  justify-self: center;
+  align-self: center;
+  margin-top: 10rem;
+  grid-column: 3/3;
+  grid-row: 2/2;
+  font-size: large;
+  opacity: 70%;
+  position: absolute;
+  z-index: 100;
 }
 
 .signout {
   justify-self: start;
   align-self: center;
-  grid-column: 3/3;
+  grid-column: 4/4;
   grid-row: 1/1;
 }
 
